# journaloo-server

./: .env  .rustfmt.toml  Cargo.toml  Procfile  RustConfig
migrations/2018-03-12-200111_create_users/: up.sql
migrations/2018-03-12-210445_create_journeys/: down.sql  up.sql
migrations/2018-03-12-215737_create_entries/: up.sql
migrations/2018-03-13-130729_all-tables/: down.sql  up.sql
src/: db.rs  lib.rs  main.rs
src/db/: mod.rs  models.rs  schema.rs
src/db/models/: entry.rs  journey.rs  mod.rs  user.rs
src/endpoints/: entry.rs  journey.rs  mod.rs  user.rs  users.rs
tests/: example.rs  user.rs
