[package]
authors = ["frank <frank.049@hotmail.com>"]
name = "journaloo-server"
version = "0.1.0"
[dependencies]
dotenv = "*"
r2d2 = "*"
r2d2-diesel = "*"
rocket = "0.3.6"
rocket_codegen = "0.3.6"
rocket_contrib = "*"
chrono = { version = "0.4.0", features = ["serde"]}
serde = "^1"
serde_derive = "^1"
bcrypt = "0.1.5"
jsonwebtoken = "2"
log = "0.4.1"
env_logger = "0.5.5"
lazy_static = "1.0.0"

[dependencies.diesel]
features = ["postgres", "chrono"]
version = "*"