[package]
authors = ["frank <frank.049@hotmail.com>"]
name = "journaloo-server"
version = "0.1.0"
[dependencies]
dotenv = "*"
r2d2 = "*"
r2d2-diesel = "*"
rocket = "0.3.6"
rocket_codegen = "0.3.6"
rocket_contrib = "*"
chrono = { version = "0.4.0", features = ["serde"]}
serde = "^1"
serde_derive = "^1"
bcrypt = "0.1.5"
jsonwebtoken = "2"
log = "0.4.1"
pretty_env_logger = "0.2.2"
lettre = "0.7.0"
lettre_email = "0.7.0"
lazy_static = "1.0.0"
rand = "0.4.2"

[dependencies.diesel]
features = ["postgres", "chrono"]
version = "*"

[dev-dependencies]
serde_json = "1.0.11"
