[package]
authors = ["frank <frank.049@hotmail.com>"]
name = "journaloo-server"
version = "0.1.0"
[dependencies]
bcrypt = "0.1.5"
dotenv = "*"
futures = "*"
jsonwebtoken = "2"
lazy_static = "1.0.0"
log = "0.4.1"
pretty_env_logger = "0.2.2"
r2d2 = "*"
r2d2-diesel = "*"
rand = "0.4.2"
rocket = "0.3.6"
rocket_codegen = "0.3.6"
rocket_contrib = "*"
rusoto_core = "*"
rusoto_s3 = "*"
sendgrid = "0.6.2"
serde = "^1"
serde_derive = "^1"

[dependencies.chrono]
features = ["serde"]
version = "0.4.0"

[dependencies.diesel]
features = ["postgres", "chrono"]
version = "*"

[dev-dependencies]
serde_json = "1.0.11"
